--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       </div>
       <div class="el suvs">
         <img src="img/icon-suvs.svg" alt="" class="img-icon">
-        <h1>SEDANS</h1>
+        <h1>SUVS</h1>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for crusing in the city or on your next road trip.</p>
         <a href="#" class="btn">Learn More</a>
       </div>
       <div class="el luxury">
         <img src="img/icon-luxury.svg" alt="" class="img-icon">
-        <h1>SEDANS</h1>
+        <h1>LUXURY</h1>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for crusing in the city or on your next road trip.</p>
         <a href="#" class="btn">Learn More</a>
       </div>
